@@ -1,5 +1,8 @@
 == 0.4.3 (In Git)
 
+=== New Features
+* Show scenario and step summary in HTML formatter (#285 Joseph Wilk)
+
 == 0.4.2 2009-10-14
 
 Bugfix release. The 0.4.1 release was hosed when switching from Hoe to Jeweler.
